--- a/src/Sandbox/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Sandbox/MainBundle/Resources/translations/messages.en.yml
@@ -2,3 +2,9 @@ cmf:
     action_block:
         title: Demo Action Block
         body: This block content is rendered by a custom Symfony2 action. It has no inline-editing.
+    raw_data: |
+      <p>This window shows the output when requesting content with an accept-header asking for xml / json.
+       This is enabled by configuring a rule in fos_rest.format_listener.rules and a jms serializer mapping
+       for the content document in config.yml.</p>
+       <p><em>Press the escape key to close</em>.</p>
+    raw_data_hint: Show raw data of this page.
